--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="/">
+      <form action="submit.php" method="post">
         <div class="banner">
           <h1>Anmeldung Wichteln</h1>
         </div>
