quick implement of mobile view

--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         </div>
         <div class="colums">
           <div class="item">
-            <label for="dname">Discord Name</label>
+            <label for="dname">Discord Name *</label>
             <input id="dname" type="text" name="dname" required/>
           </div>
           <div class="item">
@@ -23,28 +23,28 @@
             <input id="wishlist" type="text"   name="wishlist"/>
           </div>
           <div class="item">
-            <label for="adresse">Adresse (Privat oder Packstation)</label>
-            <textarea name="adresse" id="adresse" cols="30" rows="3" required></textarea>
+            <label for="adresse">Adresse *</label>
+            <textarea name="adresse" id="adresse" cols="30" rows="4" required placeholder=" (Privat oder Packstation)"></textarea>
           </div>
           <div class="item">
-            <label for="interesse">Interessen</label>
-            <textarea name="interesse" id="interesse" cols="30" rows="3" required></textarea>
+            <label for="interesse">Interessen *</label>
+            <textarea name="interesse" id="interesse" cols="30" rows="4" required></textarea>
           </div>
           <div class="item">
-            <label for="like">Lieblings... (Anime, Manga, Spiel, Essen, ...)</label>
-            <textarea name="like" id="like" cols="30" rows="3"></textarea>
+            <label for="like">Lieblings... </label>
+            <textarea name="like" id="like" cols="30" rows="4" placeholder="(Anime, Manga, Spiel, Essen, ...)"></textarea>
           </div>
           <div class="item">
-            <label for="notLike">Abneigungen/Allergien</label>
-            <textarea name="notLike" id="notLike" cols="30" rows="3" required></textarea>
+            <label for="notLike">Abneigungen/Allergien *</label>
+            <textarea name="notLike" id="notLike" cols="30" rows="4" required></textarea>
           </div>
           <div class="item">
-            <label for="code">Code</label>
+            <label for="code">Code *</label>
             <input id="code" type="text" name="code" required/>
           </div>
         </div>
         <div class="btn-block">
-          <button type="submit" href="/">Absenden</button>
+          <button type="submit">Absenden</button>
         </div>
       </form>
     </div>
