--- a/index.htm
+++ b/index.htm
@@ -5,48 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wichteln Anmeldung</title>
-<link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/universal-styles.css">
+    <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
     <div class="container">
-      <form action="submit.php" method="post">
-        <div class="banner">
-          <h1>Anmeldung Wichteln</h1>
-        </div>
-        <div class="colums">
-          <div class="item">
-            <label for="dname">Discord Name *</label>
-            <input id="dname" type="text" name="dname" required/>
+      <div class="form">
+        <form action="submit.php" method="post">
+          <div class="banner">
+            <h1>ANMELDUNG FÜR DAS TOLLSTE WICHTELN</h1>
           </div>
-          <div class="item">
-            <label for="wishlist">Wishlist</label>
-            <input id="wishlist" type="text"   name="wishlist"/>
+          <div class="colums">
+            <div class="item">
+              <label for="dname">Discord Name *</label>
+              <input id="dname" type="text" name="dname" required/>
+            </div>
+            <div class="item">
+              <label for="wishlist">Wishlist</label>
+              <input id="wishlist" type="text"   name="wishlist"/>
+            </div>
+            <div class="item">
+              <label for="adresse">Adresse *</label>
+              <textarea name="adresse" id="adresse" cols="30" rows="3" required placeholder=" (Privat oder Packstation)"></textarea>
+            </div>
+            <div class="item">
+              <label for="interesse">Interessen *</label>
+              <textarea name="interesse" id="interesse" cols="30" rows="3" required></textarea>
+            </div>
+            <div class="item">
+              <label for="like">Lieblings... </label>
+              <textarea name="like" id="like" cols="30" rows="3" placeholder="(Anime, Manga, Spiel, Essen, ...)"></textarea>
+            </div>
+            <div class="item">
+              <label for="notLike">Abneigungen/Allergien *</label>
+              <textarea name="notLike" id="notLike" cols="30" rows="3" required></textarea>
+            </div>
+            <div class="item">
+              <label for="code">Code *</label>
+              <input id="code" type="text" name="code" required/>
+            </div>
           </div>
-          <div class="item">
-            <label for="adresse">Adresse *</label>
-            <textarea name="adresse" id="adresse" cols="30" rows="4" required placeholder=" (Privat oder Packstation)"></textarea>
+          <div class="btn-block">
+            <button type="submit">Absenden</button>
           </div>
-          <div class="item">
-            <label for="interesse">Interessen *</label>
-            <textarea name="interesse" id="interesse" cols="30" rows="4" required></textarea>
-          </div>
-          <div class="item">
-            <label for="like">Lieblings... </label>
-            <textarea name="like" id="like" cols="30" rows="4" placeholder="(Anime, Manga, Spiel, Essen, ...)"></textarea>
-          </div>
-          <div class="item">
-            <label for="notLike">Abneigungen/Allergien *</label>
-            <textarea name="notLike" id="notLike" cols="30" rows="4" required></textarea>
-          </div>
-          <div class="item">
-            <label for="code">Code *</label>
-            <input id="code" type="text" name="code" required/>
-          </div>
-        </div>
-        <div class="btn-block">
-          <button type="submit">Absenden</button>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </body>
 </html>
