--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="image">
+        <img src="./images/christmas-decoration.png" alt="girl decorating a christmas tree">
+      </div>
       <div class="form">
         <form action="submit.php" method="post">
           <div class="banner">
@@ -17,33 +20,38 @@
           </div>
           <div class="colums">
             <div class="item">
-              <label for="dname">Discord Name *</label>
+              <label for="dname">Discord Name <span>*</span></label>
               <input id="dname" type="text" name="dname" required/>
+            </div>
+            <div class="item">
+              <label class="end" for="code">Code <span>*</span></label>
+              <input class="end" id="code" type="text" name="code" required/>
+            </div>
+            <div class="item">
+              <label for="adresse">Adresse <span>*</span></label>
+              <textarea name="adresse" id="adresse" cols="30" rows="3" required placeholder=" (Privat oder Packstation)"></textarea>
+            </div>
+            <div class="item">
+              <label class="end"  for="interesse">Interessen <span>*</span></label>
+              <textarea class="end" name="interesse" id="interesse" cols="30" rows="3" required></textarea>
+            </div>
+            <div class="item">
+              <label for="notLike">Abneigungen/Allergien <span>*</span></label>
+              <textarea name="notLike" id="notLike" cols="30" rows="3" required></textarea>
+            </div>
+            <div class="item">
+              <label class="end" for="like">Lieblings... </label>
+              <textarea class="end" name="like" id="like" cols="30" rows="3" placeholder="(Anime, Manga, Spiel, Essen, ...)"></textarea>
             </div>
             <div class="item">
               <label for="wishlist">Wishlist</label>
               <input id="wishlist" type="text"   name="wishlist"/>
             </div>
             <div class="item">
-              <label for="adresse">Adresse *</label>
-              <textarea name="adresse" id="adresse" cols="30" rows="3" required placeholder=" (Privat oder Packstation)"></textarea>
+              <label class="end" for="email">E-Mail</label>
+              <input class="end" id="email" type="email"   name="email"/>
             </div>
-            <div class="item">
-              <label for="interesse">Interessen *</label>
-              <textarea name="interesse" id="interesse" cols="30" rows="3" required></textarea>
-            </div>
-            <div class="item">
-              <label for="like">Lieblings... </label>
-              <textarea name="like" id="like" cols="30" rows="3" placeholder="(Anime, Manga, Spiel, Essen, ...)"></textarea>
-            </div>
-            <div class="item">
-              <label for="notLike">Abneigungen/Allergien *</label>
-              <textarea name="notLike" id="notLike" cols="30" rows="3" required></textarea>
-            </div>
-            <div class="item">
-              <label for="code">Code *</label>
-              <input id="code" type="text" name="code" required/>
-            </div>
+            
           </div>
           <div class="btn-block">
             <button type="submit">Absenden</button>
