ui for error/confirmpages on desktop

--- a/index.htm
+++ b/index.htm
@@ -20,12 +20,12 @@
           </div>
           <div class="colums">
             <div class="item">
-              <label for="dname">Discord Name <span>*</span></label>
-              <input id="dname" type="text" name="dname" required/>
+              <label for="code">Code <span>*</span></label>
+              <input id="code" type="text" name="code" required/>
             </div>
             <div class="item">
-              <label class="end" for="code">Code <span>*</span></label>
-              <input class="end" id="code" type="text" name="code" required/>
+              <label class="end"  for="dname">Discord Name <span>*</span></label>
+              <input class="end" id="dname" type="text" name="dname" required/>
             </div>
             <div class="item">
               <label for="adresse">Adresse <span>*</span></label>
