verlinkung angepasst index.php -> anmeldung.php

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1>Wichteln 2022</h1>
         </div>
         <div class="item">
-            <a href="index.php">> Am Wichteln teilnehmen</a>
+            <a href="anmeldung.php">> Am Wichteln teilnehmen</a>
         </div>
         <div class="item">
             <a href="wichtel.php">> Informationen zu meinem Wichtel anzeigen</a>
