Mail funktion und Tracking und alles so eingefügt

--- a/closed.html
+++ b/closed.html
@@ -15,7 +15,7 @@
 
       </div>
         <div class='wrapper'><div class='test'><div class='msg'><h1>Die Anmeldung ist geschlossen!</h1></div>
-        <p>Klicke <a href=wichtel.php>hier</a> xyzafaso</p>
+        <p>Klicke <a href=wichtel.php>hier</a>, um zur Wichtelübersichtsseite zu kommen!</p>
   </div>
 	
 </body>
