--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./src/universal-styles.css">
     <link rel="stylesheet" href="./src/snow.css">
     <link rel="stylesheet" href="./src/uebersicht.css">
+    <link rel="stylesheet" href="./src/mobile_index.css">
     <title>Wichteln</title>
 </head>
 <body>
