--- a/closed.html
+++ b/closed.html
@@ -6,6 +6,9 @@
 	<title>Die Anmeldung ist geschlossen!</title>
     <link rel="stylesheet" href="./src/universal-styles.css">
     <link rel="stylesheet" href="./src/style.css">
+    <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" type="image/png" href="/images/favicon/apple-touch-icon.png" sizes="180x180">
   </head>
 </head>
 <body>
