mobile view anmeldung closed

--- a/closed.html
+++ b/closed.html
@@ -6,6 +6,7 @@
 	<title>Die Anmeldung ist geschlossen!</title>
     <link rel="stylesheet" href="./src/universal-styles.css">
     <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/mobile_submit.css">
     <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
     <link rel="apple-touch-icon" type="image/png" href="/images/favicon/apple-touch-icon.png" sizes="180x180">
@@ -14,10 +15,9 @@
 <body>
 	    <div class="container">
       <div class="image">
-        <img src="./images/christmas-decoration.png" alt="girl decorating a christmas tree">
-
+        <img class='sideimg' src="./images/christmas-decoration.png" alt="girl decorating a christmas tree">
       </div>
-        <div class='wrapper'><div class='test'><div class='msg'><h1>Die Anmeldung ist geschlossen!</h1></div>
+        <div class='wrapper'><div class='test'><div class='msg closed'><h1>Die Anmeldung ist geschlossen!</h1></div>
         <p>Klicke <a href=wichtel.php>hier</a>, um zur Wichtelübersichtsseite zu kommen!</p>
   </div>
 	
