Verlinkung Edit Seite und paar fixes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="anmeldung.php">> Am Wichteln teilnehmen</a>
         </div>
         <div class="item">
-            <a href="wichtel.php">> Informationen zu meinem Wichtel anzeigen</a>
+            <a href="wichtel.php">> Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
         </div>
     </div>
 </div>
