--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <h1>Wichteln 2022</h1>
         </div>
         <div class="item">
-            <a href="anmeldung.php">> Am Wichteln teilnehmen</a>
+            <a href="anmeldung">> Am Wichteln teilnehmen</a>
         </div>
         <div class="item">
-            <a href="wichtel.php">> Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
+            <a href="wichtel">> Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
         </div>
     </div>
 </div>
