--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="wrapper">
     <div class="container">
         <div class="item">
-            <h1>Wichteln 2022</h1>
+            <img src="./images/ba3e3c551fc1be6736e85bfe0402f524.png" alt="">
         </div>
         <div class="item">
-            <a href="anmeldung">> Am Wichteln teilnehmen</a>
+            <a href="anmeldung">❄ Am Wichteln teilnehmen</a>
         </div>
         <div class="item">
-            <a href="wichtel">> Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
+            <a href="wichtel">❄ Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
         </div>
     </div>
 </div>
