--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="wrapper">
     <div class="container">
         <div class="item">
-            <img src="./images/ba3e3c551fc1be6736e85bfe0402f524.png" alt="">
+            <img class="titlepic" src="./images/ba3e3c551fc1be6736e85bfe0402f524.png" alt="ACG Logo">
         </div>
         <div class="item">
             <a href="anmeldung">❄ Am Wichteln teilnehmen</a>
