--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="wrapper">
-    <div class="container">
+    <div class="container titlegap">
         <div class="item">
             <img class="titlepic" src="./images/ba3e3c551fc1be6736e85bfe0402f524.png" alt="ACG Logo">
         </div>
