--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <div class="item">
             <a href="wichtel">❄ Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
         </div>
+        <div class="item">
+          <a href="https://anime-community-germany.de/forum/thread/43767-forenwichteln-2022-anmeldung">Zum Wichtelthread</a>
+        </div>
     </div>
 </div>
 </body>
