--- a/index.html
+++ b/index.html
@@ -1,73 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/universal-styles.css">
-    <link rel="stylesheet" href="./src/snow.css">
-    <link rel="stylesheet" href="./src/uebersicht.css">
-    <link rel="stylesheet" href="./src/mobile_index.css">
-    <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="apple-touch-icon" type="image/png" href="/images/favicon/apple-touch-icon.png" sizes="180x180">
-    <title>Wichteln</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./src/universal-styles.css">
+        <link rel="stylesheet" href="./src/snow.css">
+        <link rel="stylesheet" href="./src/uebersicht.css">
+        <link rel="stylesheet" href="./src/mobile_index.css">
+        <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
+        <link rel="apple-touch-icon" type="image/png" href="/images/favicon/apple-touch-icon.png" sizes="180x180">
+        <title>Wichteln</title>
+    </head>
+    <body>
         <div class="snowflakes" aria-hidden="true">
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
         </div>
         <div class="wrapper">
-    <div class="container titlegap">
-        <div class="item">
-            <img class="titlepic" src="./images/ba3e3c551fc1be6736e85bfe0402f524.png" alt="ACG Logo">
+            <div class="container titlegap">
+                <div class="item">
+                    <img class="titlepic" src="./images/ba3e3c551fc1be6736e85bfe0402f524.png" alt="ACG Logo">
+                </div>
+                <div class="item">
+                    <a href="anmeldung">❄ Am Wichteln teilnehmen</a>
+                </div>
+                <div class="item">
+                    <a href="wichtel">❄ Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
+                </div>
+                <div class="item">
+                    <a href="https://anime-community-germany.de/forum/thread/43767-forenwichteln-2022-anmeldung">❄ Zum Wichtelthread</a>
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <a href="anmeldung">❄ Am Wichteln teilnehmen</a>
-        </div>
-        <div class="item">
-            <a href="wichtel">❄ Informationen zu meinem Wichtel anzeigen oder meine eigenen bearbeiten</a>
-        </div>
-        <div class="item">
-          <a href="https://anime-community-germany.de/forum/thread/43767-forenwichteln-2022-anmeldung">Zum Wichtelthread</a>
-        </div>
-    </div>
-</div>
-</body>
+    </body>
 </html>
-
