vom server geholt

--- a/403.html
+++ b/403.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <h1>😠</h1>
-    <div class='back'><a href='javascript:history.back()'><img src='../images/expand_circle_down_FILL0_wght300_GRAD0_opsz48.svg'>Zurück</a></div>
+    <div class='back'><a href='javascript:history.back()'><img src='/images/expand_circle_down_FILL0_wght300_GRAD0_opsz48.svg'>Zurück</a></div>
  </body>
 </html>
